update the first section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -39,12 +39,51 @@
     <!-- Main Content -->
     <main id="main-content">
       <!-- Section 1: Sora AI Product Card -->
-      <section>
+      <section class="sora-section">
         <div class="container">
           <div class="row">
             <div class="col-12">
               <div class="sora-product-card">
-                <!-- Sora AI Icon -->
+                <!-- Sora Tag (Left) -->
+                <div class="sora-tag">
+                  <svg
+                    width="20"
+                    height="20"
+                    viewBox="0 0 20 20"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <rect width="20" height="20" rx="10" fill="white" />
+                    <circle cx="8" cy="10" r="2" fill="#333" />
+                    <circle cx="12" cy="10" r="2" fill="#333" />
+                  </svg>
+                  <span>Sora</span>
+                </div>
+
+                <!-- Product Info (Center) -->
+                <div class="sora-content">
+                  <h1 class="sora-title">خرید اکانت سورا Sora Ai</h1>
+
+                  <div class="d-flex align-items-center gap-3">
+                    <div class="sora-support">
+                      <span class="support-label">پشتیبانی :</span>
+                      <div class="support-phone">
+                        <span class="phone-icon">📞</span>
+                        <span>۰۲۱۹۱۳۰۰۰۳۳</span>
+                      </div>
+                    </div>
+
+                    <div class="sora-info">
+                      <span class="info-label">حساب های مجاز :</span>
+                      <div class="chatgpt-badge">
+                        <span class="chatgpt-icon">🧠</span>
+                        <span>ChatGPT</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Sora AI Icon (Right) -->
                 <div class="sora-icon-large">
                   <svg
                     width="80"
@@ -71,47 +110,10 @@
                         x2="100%"
                         y2="100%"
                       >
-                        <stop offset="0%" style="stop-color: #4facfe" />
-                        <stop offset="100%" style="stop-color: #00f2fe" />
+                        <stop offset="0%" style="stop-color: #012659" />
+                        <stop offset="100%" style="stop-color: #0968da" />
                       </linearGradient>
                     </defs>
-                  </svg>
-                </div>
-
-                <!-- Product Info -->
-                <div class="sora-content">
-                  <h1 class="sora-title">خرید اکانت سورا Sora Ai</h1>
-
-                  <div class="sora-support">
-                    <span class="support-label">پشتیبانی :</span>
-                    <div class="support-phone">
-                      <span class="phone-icon">📞</span>
-                      <span>۰۲۱۹۱۳۰۰۰۳۳</span>
-                    </div>
-                  </div>
-
-                  <div class="sora-info">
-                    <span class="info-label">حساب های مجاز :</span>
-                    <div class="chatgpt-badge">
-                      <span class="chatgpt-icon">🧠</span>
-                      <span>ChatGPT</span>
-                    </div>
-                  </div>
-                </div>
-
-                <!-- Sora Tag -->
-                <div class="sora-tag">
-                  <span>Sora</span>
-                  <svg
-                    width="20"
-                    height="20"
-                    viewBox="0 0 20 20"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <rect width="20" height="20" rx="10" fill="white" />
-                    <circle cx="8" cy="10" r="2" fill="#333" />
-                    <circle cx="12" cy="10" r="2" fill="#333" />
                   </svg>
                 </div>
               </div>
