fix the responsive

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -381,7 +381,7 @@
             <p class="promo-description">
               اکانت یکماهه + Sora ChatGPT اختصاصی ( روی ایمل شما )
             </p>
-            <div class="d-flex gap-4 align-items-center">
+            <div class="d-flex flex-xl-row flex-column gap-4 align-items-lg-center align-items-start">
               <div class="price-section">
                 <span class="price-label">قیمت :</span>
                 <span class="discount-percent">۲۴%</span>
@@ -481,7 +481,7 @@
       <!-- Section 3: Product Selection -->
       <section class="">
         <div class="container product-selection-section">
-          <div class="d-flex justify-content-between align-items-center mb-3">
+          <div class="d-flex gap-3 justify-content-between align-items-lg-center align-items-start flex-column flex-lg-row mb-3">
             <div class="selection-header">
               <div class="selection-title-wrapper">
                 <div class="selection-accent-bar"></div>
